force-app/main/default/objects/Promoter_Attendance_Information__c/Promoter_Attendance_Information__c.object-meta.xml
<CustomObject>
    <label>Promoter Attendance Information</label>
    <nameField>
        <displayFormat>PAF-{0000}</displayFormat>
        <label>Promoter Attendance Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter Attendance Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>