force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Check_in_out_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_in_out_Type__c</fullName>
    <label>Check in/out Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_in_out_Type</valueSetName>
    </valueSet>
</CustomField>