force-app/main/default/objects/Promoter_Attendance_Information__c/fields/CheckIn_Date__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Date__c</fullName>
    <label>Check In Date</label>
    <type>Date</type>
</CustomField>