force-app/main/default/objects/Promoter_Attendance_Information__c/fields/CheckIn_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Time__c</fullName>
    <label>Check In Time</label>
    <type>Time</type>
</CustomField>