force-app/main/default/objects/Promoter_Attendance_Information__c/fields/DeviceNativeUid__c.field-meta.xml
<CustomField>
    <fullName>DeviceNativeUid__c</fullName>
    <label>Device Native ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>