force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Is_Refill__c.field-meta.xml
<CustomField>
    <fullName>Is_Refill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refill</label>
    <type>Checkbox</type>
</CustomField>