force-app/main/default/objects/Promoter_Attendance_Information__c/fields/IsSystemAuto__c.field-meta.xml
<CustomField>
    <fullName>IsSystemAuto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System Auto</label>
    <type>Checkbox</type>
</CustomField>