force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Navigator_Information__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Information__c</fullName>
    <label>Navigator Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>