force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Promoter_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Attendance__c</fullName>
    <label>Promoter Attendance</label>
    <referenceTo>Promoter_Attendance__c</referenceTo>
    <relationshipLabel>Promoter Attendance Information</relationshipLabel>
    <relationshipName>Promoter_Attendance_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>