force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>