force-app/main/default/objects/Promoter_Attendance_Information__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Promoter Attendance Information</relationshipLabel>
    <relationshipName>Promoter_Attendance_Information</relationshipName>
    <type>Lookup</type>
</CustomField>