force-app/main/default/objects/Promoter_Attendance_Information__c/fields/UserDeviceId__c.field-meta.xml
<CustomField>
    <fullName>UserDeviceId__c</fullName>
    <label>*User Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>