force-app/main/default/objects/Promoter_Attendance_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CheckIn_Date__c</columns>
    <columns>CheckIn_Time__c</columns>
    <columns>Check_in_out_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Shop__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_Item_Type__c</field>
        <operation>equals</operation>
        <value>巡店</value>
    </filters>
    <label>All</label>
</ListView>